# rust-wroclaw-wasm-talk-01-2020

./: .gitignore  Cargo.toml  README.md  REFERENCES.md  prepare_python_wasmtime.sh
python/: README.md  main.py  requirements.txt  wasm_conway.wasm
src/: game_of_life.rs  lib.rs
wasm/: README.md  flow_control.wat  simple.wat  types_stack.wat  wasm_fib.wat
www/: .eslintrc.js  README.md  index.html  index.js  package-lock.json  package.json
